syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.qleoz12";

import "google/protobuf/wrappers.proto";

service  ExampleService {
//unary
rpc CreateExample (CreateExampleRequest) returns (CreateExampleResponse);
rpc GetExamples (GetExamplesRequest) returns (GetExamplesResponse);
rpc GetExample (GetExampleRequest) returns (GetExampleResponse);
rpc UpdateExample (ExampleDto) returns (UpdateExampleResponse);
//streams
rpc CreateExampleStream (stream CreateExampleRequest) returns (CreateStreamExampleResponse);
rpc GetExamplesStream(GetExamplesStreamRequest) returns (stream GetExampleResponse);
}

message CreateExampleRequest {
  string name = 1;
  string location = 2;
}

message CreateExampleResponse {
  ExampleDto example = 1;
}

message CreateStreamExampleResponse {
  repeated ExampleDto example = 1;
}

message GetExamplesStreamRequest {
  string location= 1;
}

message ExampleDto {
  string id = 1;
  string name = 2;
  string location=3;
  int32 status=4;
}

message GetExampleRequest {
  string id = 1;
}

message GetExampleResponse {
  ExampleDto example = 1;
}

message GetExamplesRequest {
  int32 start_page = 1;
  int32 page_size = 2;
}

message GetExamplesResponse {
  repeated ExampleDto example = 1;
  bool has_next = 2;
  bool has_previous = 3;
  int32 next_page = 4;
  int32 previous_page = 5;
  int32 total_pages = 6;
  int64 total_elements = 7;
}

message UpdateExampleResponse {
  ExampleDto example = 1;
}
